--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://http://172.24.126.122/:9000/</sonar.host.url>
+		<sonar.host.url>http://172.24.126.122:9000/</sonar.host.url>
+
 		<sonar.login>3475e27ac8ff724edfcc57b82d78aa406a353ccb</sonar.login>
 		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,10 +40,10 @@
 		
 		<!-- test dependencies -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			 <groupId>junit</groupId>
+  <artifactId>junit</artifactId>
+  <version>${junit.version}</version>
+  <scope>test</scope>
 		</dependency>
 
 		<dependency>
